<resources>
    <string name="app_name">Parental Peace App</string>
    <string name="welcome_to_">Welcome To Parental Peace</string>
    <string name="understand_">Understand Your Baby Better With Us</string>
    <string name="please_choo">Please Choose And Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_button">Back</string>
    <string name="name_input">Name</string>
    <string name="email_input">Email</string>
    <string name="number_input">Mobile Number</string>
    <string name="password_input">Password</string>
    <string name="retype_input">Retype Password</string>
    <string name="crt_account_button">Create Account</string>
    <string name="ishave_account">Already have an account?</string>
    <string name="parental_peace">Parental Peace</string>
    <string name="provide_word">Provide comfort to your little baby</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">profile</string>
    <string name="title_other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record">Record</string>
    <string name="optional_features">Optional Features</string>
    <string name="information_recommendations">Information Recommendations</string>
    <string name="consultation">Consultation</string>
    <string name="history_transaction">Transaction History</string>
    <string name="information">Information</string>
    <string name="no_notification">No notification yet</string>
    <string name="change">Edit</string>
    <string name="age_input">Age\t\t\t\t:</string>
    <string name="gender_input">Gender\t:</string>
    <string name="logout">Log Out</string>
    <string name="language">Language</string>
    <string name="delete_account">Delete Acount</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="filter_menu">Filter Menu</string>
    <string name="all">All</string>
    <string name="succeed">Succeed</string>
    <string name="being_processed">Being processed</string>
    <string name="failed">Failed</string>
    <string name="save_information">Saved</string>
    <string name="record_time">Recording 00:00</string>
    <string name="end">end</string>
    <string name="translation_results">Translation Results</string>
    <string name="result_tittle_dummy">Bayi mungkin mengalami rasa sakit perut karena kolik</string>
    <string name="result1_dummy">Pegang bayi dengan lembut dan nyaman</string>
    <string name="result2_dummy">Gunakan botol berbentuk payung untuk menyusui</string>
    <string name="result3_dummy">Coba pijat perut bayi dengan gerakan lembut searah jarum jam</string>

    <string name="email_error">Enter the appropriate email format!</string>
    <string name="password_error">Password Must Not Be Less Than 8 Characters!</string>

    <string name="null_name">Name Column can not be empty</string>
    <string name="null_email">Email Column can not be empty</string>
    <string name="null_password">Password Column can not be empty</string>
    <string name="next">Next</string>
    <string name="regis_succses">Registration Successful! Your account has been successfully created.</string>
    <string name="signin_success">Sign In Success</string>
    <string name="null_number">Number can not be empty</string>
    <string name="no_transaction_yet">No Transaction Yet</string>
    <string name="no_listdoctor">can not show doctor list</string>
    <string name="no_articel">Can not show article list</string>
    <string name="logout_reminder">You want to Log out?</string>
    <string name="cancel">Cancel</string>
    <string name="not_simmilar">The input is different from the password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_url">Get URL</string>
    <string name="payment">Payment</string>
    <string name="total_payment">Total Payment</string>
</resources>