<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".ui.signup.SignUpActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/back_button1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textAppearance="@style/font24"
        app:layout_constraintStart_toEndOf="@+id/back_button1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="132dp"
        android:text="@string/name_input"
        android:textAppearance="@style/font12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/et_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/name_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextContrastCheck,TextFields" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:text="@string/email_input"
        android:textAppearance="@style/font12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        tools:ignore="TextContrastCheck" />


    <com.dicoding.parentalpeaceapp.custom.CustomEmailEditText
        android:id="@+id/et_email"
        style="@style/signup_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/email_textView"
        app:layout_constraintTop_toBottomOf="@+id/email_textView"
        tools:ignore="TextContrastCheck,TextFields,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/number_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:text="@string/number_input"
        android:textAppearance="@style/font12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_number"
        style="@style/signup_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="phone"
        android:hint="@string/number_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_textView"
        tools:ignore="TextContrastCheck,TextFields,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:text="@string/password_input"
        android:textAppearance="@style/font12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_number"
        tools:ignore="TextContrastCheck" />

    <com.dicoding.parentalpeaceapp.custom.CustomPasswordEditText
        android:id="@+id/et_password"
        style="@style/signup_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@id/password_textView"
        app:layout_constraintTop_toBottomOf="@+id/password_textView"
        tools:ignore="TextContrastCheck,TextFields,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/retypepw_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:text="@string/retype_input"
        android:textAppearance="@style/font12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:ignore="TextContrastCheck" />

    <com.dicoding.parentalpeaceapp.custom.CustomPasswordEditText
        android:id="@+id/et_retypepw"
        style="@style/signup_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/retype_input"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/retypepw_textView"
        app:layout_constraintTop_toBottomOf="@+id/retypepw_textView"
        tools:ignore="TextContrastCheck,TextFields,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btn_crtAccount"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/create_accountbtn"
        android:contentDescription="@string/crt_account_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_retypepw"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/ishave_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ishave_account"
        android:textAppearance="@style/font12"
        app:layout_constraintEnd_toStartOf="@+id/tv_signin_click"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crtAccount"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_signin_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickHandler"
        android:text="@string/sign_in"
        android:textAppearance="@style/font12"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.730"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crtAccount"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>