<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".ui.fragment.other.OtherFragment">

    <ImageView
        android:id="@+id/otherlgView"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/title_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_other"
        android:textSize="20sp"
        android:textAppearance="@style/font18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/language_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonother_box_bg"
        android:contentDescription="@string/logout"
        android:paddingStart="30dp"
        android:text="@string/language"
        android:textAlignment="textStart"
        android:textAppearance="@style/font14"
        android:textColor="@color/black_hint2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_other" />

    <Button
        android:id="@+id/delete_acc_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/buttonother_box_bg"
        android:contentDescription="@string/logout"
        android:paddingStart="30dp"
        android:text="@string/delete_account"
        android:textAlignment="textStart"
        android:textAppearance="@style/font14"
        android:textColor="@color/black_hint2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_btn" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/buttonother_box_bg"
        android:contentDescription="@string/logout"
        android:paddingStart="30dp"
        android:text="@string/logout"
        android:textAlignment="textStart"
        android:textAppearance="@style/font14"
        android:textColor="@color/black_hint2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_acc_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>