<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_background"
    tools:context=".ui.signin.SignInActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lovelight_regular"
        android:text="@string/parental_peace"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_provideword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_provideword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/provide_word"
        android:textAppearance="@style/font12"
        app:layout_constraintBottom_toTopOf="@+id/email_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/email_input"
        android:textAppearance="@style/font12"
        app:layout_constraintBottom_toTopOf="@+id/et_email_login"
        app:layout_constraintStart_toStartOf="@+id/et_email_login"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/baseline_email_24"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@id/et_email_login"
        app:layout_constraintTop_toTopOf="@+id/et_email_login" />

    <com.dicoding.parentalpeaceapp.custom.CustomEmailEditText
        android:id="@+id/et_email_login"
        style="@style/signup_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"
        tools:ignore="DuplicateClickableBoundsCheck,
        DuplicateSpeakableTextCheck,
        RtlSymmetry,
        TextContrastCheck,
        TextFields" />

    <TextView
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password_input"
        android:textAppearance="@style/font12"
        app:layout_constraintStart_toStartOf="@+id/et_email_login"
        app:layout_constraintTop_toBottomOf="@+id/et_email_login"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/baseline_key_24"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toTopOf="@+id/et_password"
        tools:ignore="ImageContrastCheck" />

    <com.dicoding.parentalpeaceapp.custom.CustomPasswordEditText
        android:id="@+id/et_password"
        style="@style/signup_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="50dp"
        android:autofillHints="password"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,
        TextContrastCheck,TextFields" />

    <ImageButton
        android:id="@+id/btn_signin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_btn"
        android:contentDescription="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/donthave_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ishave_account"
        android:textAppearance="@style/font12"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_signup_click"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_signup_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickHandler"
        android:text="@string/sign_up"
        android:textAppearance="@style/font12"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.730"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>