<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_bg"
    tools:context=".ui.main.bottomnavigation.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profilelgView"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_profile"
        android:textSize="20sp"
        android:textAppearance="@style/font18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_item1"
        android:layout_width="360dp"
        android:layout_height="190dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_box_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_profile"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/profile_circularImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/circle_viewimg"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_person_pin_24"
        app:layout_constraintStart_toStartOf="@+id/iv_item1"
        app:layout_constraintTop_toTopOf="@+id/iv_item1" />


    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/name_input"
        android:textAppearance="@style/font14"
        android:textColor="@color/black_hint"
        app:layout_constraintStart_toEndOf="@+id/profile_circularImageView"
        app:layout_constraintTop_toTopOf="@+id/profile_circularImageView" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/email_input"
        android:textAppearance="@style/font12"
        android:textColor="@color/black_hint2"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <TextView
        android:id="@+id/profile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/number_input"
        android:textAppearance="@style/font12"
        android:textColor="@color/black_hint2"
        app:layout_constraintStart_toStartOf="@+id/profile_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

</androidx.constraintlayout.widget.ConstraintLayout>